@@ -433,14 +433,14 @@ prior <- function(prior, ...) {
 #' 
 #' @export
 get_prior <- function(formula, data, family = gaussian(),
-                      autocor = NULL, nonlinear = NULL, partial = NULL, 
+                      autocor = NULL, nonlinear = NULL,
                       threshold = c("flexible", "equidistant"), 
                       internal = FALSE) {
   # note that default priors are stored in this function
   family <- check_family(family) 
   link <- family$link
   formula <- update_formula(formula, data = data, family = family, 
-                            partial = partial, nonlinear = nonlinear)
+                            nonlinear = nonlinear)
   threshold <- match.arg(threshold)
   autocor <- check_autocor(autocor)
   ee <- extract_effects(formula, family = family)
